(openapi): Regenerate src
