# src/api/openapi.yaml
@@ -48,6 +48,27 @@ paths:
       tags:
       - Items
       x-eov-operation-handler: controllers/ItemsController
+  /items/{id}:
+    get:
+      operationId: getItem
+      parameters:
+      - explode: false
+        in: path
+        name: id
+        required: true
+        schema:
+          $ref: '#/components/schemas/Id'
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Item'
+          description: Item.
+      tags:
+      - Items
+      x-eov-operation-handler: controllers/ItemsController
 components:
   schemas:
     ItemData:
